--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="pink">#FF17F0</color>
+    <color name="pinkDark">#AA12A0</color>
     <color name="blue">#005FFF</color>
 </resources>
