--- a/app/src/main/res/layout/item_viewpager.xml
+++ b/app/src/main/res/layout/item_viewpager.xml
@@ -8,20 +8,35 @@
         android:id="@+id/img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/jumpingpeople"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:src="@drawable/jumpingpeople" />
 
     <TextView
         android:id="@+id/text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="sample text"
-        android:textSize="40dp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/inter_thin"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="120dp"
+        android:fontFamily="@font/inter_thin"
+        android:text="sample text"
         android:textAlignment="center"
-        android:layout_margin="50dp" />
+        android:textColor="@color/white"
+        android:textSize="40dp" />
+
+    <Button
+        android:id="@+id/btn_start"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp"
+        android:layout_marginHorizontal="20dp"
+        android:background="@drawable/shape_round"
+        android:fontFamily="@font/inter_thin"
+        android:text="Start"
+        android:visibility="invisible"
+        android:textSize="20dp" />
 
 </RelativeLayout>
