--- a/app/src/main/res/layout/activity_forgot.xml
+++ b/app/src/main/res/layout/activity_forgot.xml
@@ -11,10 +11,45 @@
         android:id="@+id/tv_forgot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="100dp"
+        android:layout_marginTop="100dp"
         android:fontFamily="@font/inter_extrabold"
         android:text="Forgot a password?"
         android:textColor="@color/black"
         android:textSize="40dp" />
+
+    <EditText
+        android:id="@+id/et_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_forgot"
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/inter_regular"
+        android:hint="Email"
+        android:textColor="#000000"
+        android:textColorHighlight="#000000"
+        android:textColorLink="#676767" />
+
+    <Button
+        android:id="@+id/btn_enter"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_below="@id/et_email"
+        android:layout_marginVertical="30dp"
+        android:background="@drawable/shape_round"
+        android:fontFamily="@font/inter_bold"
+        android:text="Enter" />
+
+    <TextView
+        android:id="@+id/tv_backlogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btn_enter"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp"
+        android:fontFamily="@font/inter_regular"
+        android:text="Back"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="22dp" />
 
 </RelativeLayout>
