--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,10 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
+        app:backgroundTint="@color/black"
+        app:itemIconTint="@color/navbar_icon"
+        app:itemRippleColor="@color/pinkDark"
+        app:itemTextColor="@color/navbar_icon"
         app:menu="@menu/menu">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
