--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -1,12 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="map fragment" />
-</RelativeLayout>
+
+    <FrameLayout
+        android:id="@+id/bottom_sheet"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="30dp"
+        android:paddingHorizontal="20dp"
+        android:background="@drawable/shape_panel"
+        android:backgroundTint="@color/black"
+        android:paddingTop="7dp"
+        android:paddingBottom="50dp"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+        <ImageView
+            android:layout_width="120dp"
+            android:layout_height="5dp"
+            android:src="@drawable/ic_baseline_brightness_1_24"
+            android:scaleType="centerCrop"
+            app:tint="@color/gray"
+
+            android:layout_gravity="center|top"/>
+        <androidx.core.widget.NestedScrollView
+            android:paddingTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:textAlignment="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nisi nisl, commodo interdum nulla et, euismod sodales est. Donec in felis sit amet elit efficitur pulvinar in vitae turpis. Fusce rhoncus varius lorem vel ullamcorper. Nam semper, lacus volutpat volutpat accumsan, libero orci facilisis augue, ac ultrices sem quam ut ex. Maecenas posuere tellus quis diam aliquam malesuada. Nunc at lacus cursus, rutrum augue vel, vestibulum augue. Pellentesque porta pharetra neque, ac finibus odio aliquet a. Aliquam commodo justo eu quam tempor maximus. Phasellus in leo vitae justo tincidunt porttitor. Integer at massa eu nibh posuere iaculis. Phasellus ullamcorper augue in urna mollis, vel aliquet lorem molestie. Proin in vestibulum massa. Maecenas hendrerit euismod dolor, et feugiat justo iaculis et. "
+                android:textSize="30sp"
+                android:textColor="@color/white"
+                />
+
+        </androidx.core.widget.NestedScrollView>
+
+
+    </FrameLayout>
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
