--- a/app/src/main/res/menu/nav_items.xml
+++ b/app/src/main/res/menu/nav_items.xml
@@ -2,15 +2,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/item1"
-        android:title="Filters"
-        android:orderInCategory="100"
-        android:icon="@drawable/ic_baseline_filter_alt_24"
-        app:showAsAction="ifRoom">
+        android:title="Favorite"
+        android:orderInCategory="1"
+        android:icon="@drawable/ic_baseline_favorite_border_24"
+        app:showAsAction="always">
     </item>
     <item android:id="@+id/item2"
+        android:title="Filters"
+        android:orderInCategory="2"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_baseline_filter_alt_24" >
+    </item>
+    <item android:id="@+id/item3"
         android:title="Search"
-        android:orderInCategory="200"
-        app:showAsAction="ifRoom"
+        android:orderInCategory="3"
+        app:showAsAction="always"
         android:icon="@drawable/ic_baseline_location_searching_24" >
     </item>
 </menu>
