--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="pink">#FF17F0</color>
     <color name="pinkDark">#AA12A0</color>
     <color name="blue">#005FFF</color>
+    <color name="gray">#5D5D5D</color>
 </resources>
