--- a/app/src/main/res/layout/account_fragment.xml
+++ b/app/src/main/res/layout/account_fragment.xml
@@ -1,12 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
+    android:paddingHorizontal="20dp">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_marginTop="100dp"
+        android:src="@drawable/sunset1" />
 
     <TextView
-        android:id="@+id/textView"
+        android:layout_toRightOf="@id/imageView"
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="20dp"
+        android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="account fragment" />
+        android:text="Name Surname"
+        android:fontFamily="@font/inter_extrabold"
+        android:textColor="@color/black"
+        android:textSize="40dp"/>
+
+    <TextView
+        android:id="@+id/tv_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Edit"
+        android:layout_below="@id/tv_name"
+        android:layout_toRightOf="@id/imageView"
+        android:layout_marginLeft="20dp"
+        android:fontFamily="@font/inter_regular"
+        android:textSize="20dp"/>
+
+
 </RelativeLayout>
