--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -65,28 +65,32 @@
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingTop="12dp">
-            <RelativeLayout
+            android:paddingTop="12dp"
+            android:fillViewport="true">
+
+            <LinearLayout
                 android:layout_width="match_parent"
+                android:orientation="vertical"
                 android:layout_height="match_parent">
+
                 <TextView
+                    android:id="@+id/tv_close"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
                     android:text="Close to you"
                     android:textAlignment="center"
                     android:textColor="@color/white"
-                    android:gravity="center"
-                    android:textSize="30sp"
-                    android:id="@+id/tv_close"/>
-                <ListView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_close">
+                    android:textSize="30sp" />
 
-                </ListView>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/lv_close"
+                    android:layout_width="match_parent"
+                    android:layout_height= "match_parent"
+                    android:foregroundTint="@color/pink" />
 
-
-            </RelativeLayout>
+            </LinearLayout>
 
         </androidx.core.widget.NestedScrollView>
 
